<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="80dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/student_text_view"
        android:layout_width="237dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:hint="@string/student_text_view" />

    <TextView
        android:id="@+id/grade_text_view"
        android:layout_width="237dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/grade_text_view" />
    <Button
        android:id="@+id/display_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/display_button"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@android:dimen/app_icon_size"
        >
        <Button
            android:id="@+id/pre_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_student_button"
            />

        <Button
            android:id="@+id/next_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_student_button"
            />
    </LinearLayout>


</FrameLayout>